:bug: Wrap code when printed

--- a/src/_includes/stylesheets/layout.css
+++ b/src/_includes/stylesheets/layout.css
@@ -365,6 +365,13 @@ pre {
   line-height: 1.618034; /* φ */
 }
 
+@media print {
+  pre {
+    white-space: pre-wrap;
+    white-space: break-spaces;
+  }
+}
+
 code {
   text-orientation: sideways;
 }
